# rust-recipes

./: .gitignore  Cargo.toml  README.md
src/: cbor-serialization.rs  json-serialization.rs  main.rs  read-write-file.rs
