[package]
name = "rust-recipes"
version = "0.1.0"
authors = ["Vagmi Mudumbai <vagmi.mudumbai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="read-write-file"
path="src/read-write-file.rs"

[[bin]]
name="json"
path="src/json-serialization.rs"

[dependencies]
serde_json = "1.0"
serde = {version="1.0", features=["derive"]}